# moredevs-ebook-001-code

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.en.md  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  question.md
.github/workflows/: ci.yml  docs-sync.yml
docs/: README.md
lib-comum/: README.md
lib-comum/grafana/provisioning/dashboards/: dashboards.yml
lib-comum/grafana/provisioning/datasources/: timescaledb.yml
lib-comum/mosquitto/: mosquitto.conf
lib-comum/sql/init/: 01_extensions.sql
lib_comum/: README.md  db.py  mqtt.py
lib_comum/data_synth/: __init__.py  alimentar.py  base.py  schemas.py
lib_comum/grafana/provisioning/dashboards/: dashboards.yml
lib_comum/grafana/provisioning/datasources/: timescaledb.yml
lib_comum/plc_sim/: __init__.py  modbus_emulator.py  state_clock.py
lib_comum/sql/init/: 02_telemetry.sql  03_oee.sql
pack-extra/: README.md
receita-1-olho-da-fabrica/: README.en.md  README.md
receita-1-olho-da-fabrica/data-exemplo/: README.md
receita-1-olho-da-fabrica/nivel-1-diy/: README.en.md  README.md
receita-1-olho-da-fabrica/nivel-1-diy/firmware-esp32/: README.en.md  README.md  platformio.ini  secrets.ini.example
receita-1-olho-da-fabrica/nivel-1-diy/firmware-esp32/src/: main.cpp
receita-1-olho-da-fabrica/nivel-1-diy/grafana-dashboards/: n1-overview.json
receita-1-olho-da-fabrica/nivel-1-diy/ingest/: mqtt_to_db.py
receita-1-olho-da-fabrica/nivel-1-diy/simulator/: replay_to_mqtt.py
receita-1-olho-da-fabrica/nivel-2-pro/: README.en.md  README.md
receita-1-olho-da-fabrica/nivel-2-pro/grafana-dashboards/: n2-oee-overview.json
receita-1-olho-da-fabrica/nivel-2-pro/modbus_collector/: main.py
receita-2-maquina-avisa/: README.en.md  README.md
receita-2-maquina-avisa/nivel-3-premium/: README.md
receita-3-orcamentista/: README.en.md  README.md
receita-3-orcamentista/nivel-2-pro/: README.md
receita-4-corte-sem-desperdicio/: README.en.md  README.md
receita-5-promessa-prazo/: README.en.md  README.md
tests/: README.md  test_data_synth_alimentar.py  test_r1_n1_e2e.py  test_r1_n2_e2e.py
tools/: README.md  seed_synth_data.py
