[project]
name = "moredevs-ebook-001-code"
version = "0.1.0"
description = "Companion code for the ebook 'Fábrica Inteligente: Receitas de IA' (MoreDevs.ai)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "MoreDevs.ai", email = "hello@moredevs.ai" },
]
keywords = [
    "industrial-iot",
    "manufacturing",
    "ai",
    "sme",
    "timescaledb",
    "modbus",
    "opc-ua",
    "mqtt",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core (used across most recipes)
    "pandas>=2.2",
    "numpy>=2.0",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    # Database
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    # MQTT
    "paho-mqtt>=2.1",
    # Alerting
    "apprise>=1.9",
]

[project.optional-dependencies]
# Each recipe can be installed in isolation via:  uv sync --extra receita-1
receita-1 = [
    "pymodbus>=3.7",
    "asyncua>=1.1",
]
receita-2 = [
    "scipy>=1.14",
    "scikit-learn>=1.5",
]
receita-3 = [
    "anthropic>=0.39",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "streamlit>=1.40",
    "pypdf>=5.0",
    "openpyxl>=3.1",
    "chromadb>=0.5",
]
receita-4 = [
    "rectpack>=0.2.2",
    "pyclipper>=1.3",
    "svgwrite>=1.4",
    "streamlit>=1.40",
]
receita-5 = [
    "ortools>=9.11",
    "streamlit>=1.40",
    "plotly>=5.24",
]
all = [
    "moredevs-ebook-001-code[receita-1,receita-2,receita-3,receita-4,receita-5]",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "types-paho-mqtt",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "lib_comum", "receita-1-olho-da-fabrica", "receita-2-maquina-avisa", "receita-3-orcamentista", "receita-4-corte-sem-desperdicio", "receita-5-promessa-prazo"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires docker compose stack running",
    "slow: tests that take >5s",
]

[tool.coverage.run]
branch = true
source = ["lib_comum"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib_comum"]
